--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,4 @@
+
 management:
   endpoints:
     web:
@@ -6,6 +7,8 @@ management:
   info:
     env:
       enabled: true
+
+info:
   application:
     name: spring-blog
     description: A blog with articles about The Spring Framework.
