trying out first without sql init mode always

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -6,6 +6,6 @@ spring:
     name: blog
 
 # commented out, cus it is already deployment into Railway
-sql:
-  init:
-    mode: always
+#sql:
+#  init:
+#    mode: always
